--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tensorflow/tfjs": "^4.1.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
